crates/kernel/brioche-macro/tests/ui/fail_plugin_missing_name.rs
use brioche_core::BriochePlugin;
use brioche_macro::brioche_plugin;

struct MissingNamePlugin;

#[brioche_plugin(capabilities = "ON_INPUT")]
impl BriochePlugin for MissingNamePlugin {}

fn main() {}
